--- a/package.json
+++ b/package.json
@@ -8,8 +8,30 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.8.0",
+    "emotion-theming": "^10.0.27",
+    "gql": "^1.1.2",
+    "graphql": "^15.3.0",
+    "isomorphic-unfetch": "^3.0.0",
+    "js-cookie": "^2.2.1",
+    "jwt-decode": "^2.2.0",
     "next": "9.4.4",
+    "next-apollo": "^4.0.1",
+    "polished": "^3.6.5",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-apollo": "^3.1.5",
+    "react-dom": "16.13.1",
+    "recompose": "^0.30.0",
+    "strapi-sdk-javascript": "^0.3.3",
+    "strip": "^3.0.0",
+    "stripe": "^8.79.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.26",
+    "@types/react": "^16.9.43",
+    "typescript": "^3.9.7"
   }
 }
